# parallel-ML-Lab-k-means

./: CMakeLists.txt  README.md
q1/: Makefile  k-means.c
q2/: Makefile  k-means.c
q3/: Makefile  k-means.c
q4/: Makefile  k-means.c
q5/: Makefile  k-means.c
q6/: Makefile  k-means.c
